# pf3_manager

./: .clinerules  .gitignore  Dockerfile  README.md  docker-compose.yml  nixpacks.toml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  i18n.js  index.css  main.jsx
templates/invoices/: invoice_pdf.html
templates/registration/: password_reset_email.html  password_reset_subject.txt
tutor/: adapters.py  admin.py  authentication.py  models.py  serializers.py  tests.py  urls.py  validators.py  views.py
tutor/migrations/: 0001_initial.py  0002_exammodule_examrecord_examstandard_tutor_created_at_and_more.py  0003_officialexamresult.py  0004_lesson.py  0005_student_status.py  0006_todo.py  0007_alter_todo_options_todo_category_todo_priority.py  0008_officialexamresult_exam_mode.py  0009_alter_officialexamresult_total_score.py  0010_courseregistration_memo_examrecord_memo.py  0011_examrecord_source_alter_student_age.py  0012_examdetailresult_score_and_more.py  0013_student_address_student_billing_name_businessprofile_and_more.py  0014_remove_student_address_student_city_student_country_and_more.py  0015_invoice_course_registration_invoice_discount_amount_and_more.py  0016_businessprofile_default_intro_text.py  0017_remove_invoice_discount_amount_and_more.py  0018_alter_invoice_adjustment_label_and_more.py  0019_student_customer_number.py  0020_alter_student_customer_number.py  0020_remove_invoice_adjustment_label_and_more.py  (+9 more)
(+39 files in other folders)
